--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ test =
     pytest-mock==2.0.0
     pytest-cov==2.8.1
     pyramid==1.10.4
+    Werkzeug==2.3.8
     Flask==2.0.1
 
 [options.packages.find]
